log/build_2023-10-20_12-45-43/mine_sweeper/stderr.log
  File "/home/tyler122333/HW4/install/mine_sweeper/lib/python3.10/site-packages/mine_sweeper/sweeper.py", line 38
    img = np.reshape(img, (SCALE[0]*SCALE[1],3)
                    ^
SyntaxError: '(' was never closed

